@@ -160,6 +160,10 @@ The following variables can be set:
 
 	Number of spaces per tab. The default is 8 spaces.
 
+'diff-context' (int)::
+
+	Number of context lines to show for diffs.
+
 Bind command
 ------------
 
@@ -301,6 +305,8 @@ put in either the .gitconfig or .git/config file:
 |status-update		|Update file status
 |status-merge		|Resolve unmerged file
 |stage-next		|Find next chunk to stage
+|diff-context-up	|Increase the diff context
+|diff-context-down	|Decrease the diff context
 |=============================================================================
 
 .Cursor navigation
