@@ -11,6 +11,8 @@ Incompatibilities:
 
 Improvements:
 
+ - Add diff-context option and bindings to increase the diff context in
+   the stage view.
  - (GH-6) Make blame configurable via extra options passed from the command
    line and blame-options setting from ~/.tigrc. For example:
    
